# netscope

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  PUBLISHING.md  README.md  RELEASE_CHECKLIST.md  ROADMAP.md  pyproject.toml
.github/workflows/: test.yml
docs/: API.md  extending-frameworks.md  isolation-design.md
docs/cleanup/: 1-dedup-dry.md  2-shared-types.md  3-unused-code.md  4-circular-deps.md  5-weak-types.md  6-defensive-code.md  7-legacy-fallback.md  8-comments-slop.md
docs/superpowers/plans/: 2026-06-13-phase3-deeper-llm-views.md
docs/superpowers/specs/: 2026-06-13-phase3-deeper-llm-views-design.md
examples/: diff_demo.py  generation_timeline_demo.py  isolate_demo.py  llm_explain_demo.py  mcp_server_demo.py  memory_demo.py  mismatch_demo.py  profile_demo.py  real_model_demo.py  resnet_demo.py  roles_demo.py  sfumato_cmajc.py  showcase.py  static_dim_check_demo.py  transformer_demo.py  views_demo.py
extension/: .vscodeignore  README.md  eslint.config.mjs  knip.json  package-lock.json  package.json  tsconfig.json
extension/media/: template.html
extension/src/: diagnostics.ts  extension.ts  inlayHints.ts  ir.ts  mergeByLoc.ts  render.ts  shapeDecorations.ts  traceStore.ts
extension/src/test/: mergeByLoc.test.ts
extension/test/: headless.js
netscope/: __init__.py  __main__.py  autofix.py  playground.py
netscope/core/: capture.py  checks.py  context.py  diff.py  ir.py  merge.py  registry.py  stage_flow.py  timeline.py
netscope/enrich/: attention.py  flops.py  memory.py  params.py  roles.py
netscope/hints/: api.py
netscope/instrument/: base.py  torch_nn.py  transformers_hf.py
netscope/llm/: __init__.py  __main__.py  infer.py  prompts.py  provider.py  views.py
netscope/mcp/: __init__.py  __main__.py  server.py
netscope/sinks/: file_sink.py  html_sink.py  json_sink.py  mermaid_sink.py
netscope/static/: __main__.py  ast_producer.py  cli.py  dims.py  fx_trace.py  module_loc.py
netscope/web/: template.html
scripts/: _probe_sfumato_ast.py
tests/: test_attention.py  test_audit_fixes.py  test_autofix.py  test_capture_core.py  test_capture_hf.py  test_capture_options.py  test_capture_torch.py  test_checks.py  test_cli_and_filesink.py  test_dataflow.py  test_diff.py  test_enrich.py  test_fusion.py  test_fx_trace.py  test_hint_torch_nesting.py  test_hints.py  test_infer.py  test_instrument_base.py  test_integration_known_models.py  test_ir.py  test_isolate.py  test_kv_cache.py  test_llm.py  test_llm_robustness.py  test_mcp.py  test_memory.py  test_meta_richness.py  test_module_loc.py  test_no_import_cycles.py  test_overhead.py  test_playground.py  test_profile.py  test_registry.py  test_roles.py  test_sam3.py  test_scope.py  test_session_safety.py  test_showcase.py  test_sinks.py  test_stage_flow.py  (+5 more)
tools/: record_scene.mjs
