[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "netscope"
version = "0.1.5"
description = "An oscilloscope for your neural net — import and auto-trace any PyTorch/transformers pipeline into an interactive architecture graph with live tensor shapes, zero decorators."
requires-python = ">=3.10"
dependencies = [
    "wrapt>=1.14",
    "networkx>=3.0",
]
readme = "README.md"
keywords = ["pytorch", "transformers", "visualization", "tracing", "neural-network", "graph", "debugging", "machine-learning", "deep-learning", "shapes"]
classifiers = ["Development Status :: 4 - Beta", "Intended Audience :: Developers", "Intended Audience :: Science/Research", "Programming Language :: Python :: 3", "Programming Language :: Python :: 3.10", "Programming Language :: Python :: 3.11", "Programming Language :: Python :: 3.12", "Topic :: Scientific/Engineering :: Artificial Intelligence", "Topic :: Scientific/Engineering :: Visualization", "Topic :: Software Development :: Debuggers"]
license = "MIT"

[project.optional-dependencies]
# torch/transformers are the runtime netscope traces — kept optional (heavy,
# platform-specific wheels), installable as extras for convenience.
torch = ["torch>=2.0"]
# transformers v5 (Python 3.10+) — the line that ships SAM3 / SAM2 / RT-DETR etc.
hf = ["transformers>=5"]
flops = ["thop>=0.1.1"]
otel = ["opentelemetry-api>=1.20"]
dev = ["pytest>=7", "thop>=0.1.1"]

[project.scripts]
netscope = "netscope.__main__:main"

[[project.authors]]
name = "Eren Akbulut"
email = "erenakbulutwork@gmail.com"

[project.urls]
Homepage = "https://github.com/eren23/netscope"
Repository = "https://github.com/eren23/netscope"
Issues = "https://github.com/eren23/netscope/issues"
Changelog = "https://github.com/eren23/netscope/blob/main/CHANGELOG.md"
Documentation = "https://github.com/eren23/netscope/blob/main/docs/API.md"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["netscope*"]


[tool.setuptools.package-data]
netscope = ["py.typed", "web/*.html", "web/**/*.html", "web/*.js", "web/**/*.js"]
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
