[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "netscope"
version = "0.1.5"
description = "An oscilloscope for your neural net — import and auto-trace any PyTorch/transformers pipeline into an interactive architecture graph with live tensor shapes, zero decorators."
requires-python = ">=3.10"
dependencies = [
    "wrapt>=1.14",
    "networkx>=3.0",
]
readme = "README.md"
keywords = ["pytorch", "transformers", "visualization", "tracing", "neural-network", "graph", "debugging", "machine-learning", "deep-learning", "shapes"]
classifiers = ["Development Status :: 4 - Beta", "Intended Audience :: Developers", "Intended Audience :: Science/Research", "Programming Language :: Python :: 3", "Programming Language :: Python :: 3.10", "Programming Language :: Python :: 3.11", "Programming Language :: Python :: 3.12", "Topic :: Scientific/Engineering :: Artificial Intelligence", "Topic :: Scientific/Engineering :: Visualization", "Topic :: Software Development :: Debuggers"]
license = "MIT"

[project.optional-dependencies]
# torch/transformers are the runtime netscope traces — kept optional (heavy,
# platform-specific wheels), installable as extras for convenience.
torch = ["torch>=2.0"]
# transformers v5 (Python 3.10+) — the line that ships SAM3 / SAM2 / RT-DETR etc.
hf = ["transformers>=5"]
flops = ["thop>=0.1.1"]
otel = ["opentelemetry-api>=1.20"]
dev = ["pytest>=7", "thop>=0.1.1", "ruff>=0.6", "mypy>=1.10", "vulture>=2.10"]

[project.scripts]
netscope = "netscope.__main__:main"

[[project.authors]]
name = "Eren Akbulut"
email = "erenakbulutwork@gmail.com"

[project.urls]
Homepage = "https://github.com/eren23/netscope"
Repository = "https://github.com/eren23/netscope"
Issues = "https://github.com/eren23/netscope/issues"
Changelog = "https://github.com/eren23/netscope/blob/main/CHANGELOG.md"
Documentation = "https://github.com/eren23/netscope/blob/main/docs/API.md"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["netscope*"]


[tool.setuptools.package-data]
netscope = ["py.typed", "web/*.html", "web/**/*.html", "web/*.js", "web/**/*.js"]
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
# pyflakes (F) is the real gate: unused imports/vars, undefined names. The
# E4/E7/E9 pycodestyle subset catches import-placement and statement-structure
# issues. The test suite's compact one-liner style is intentional, so the
# stylistic E-rules are relaxed there only.
select = ["E4", "E7", "E9", "F"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["E401", "E402", "E701", "E702", "E731", "E741"]

[tool.mypy]
python_version = "3.10"
files = ["netscope"]
# torch/transformers/wrapt/thop ship partial or no stubs; the runtime they trace
# is dynamic by nature, so missing third-party types are ignored rather than
# stubbed. Internal netscope code is checked; tighten incrementally.
ignore_missing_imports = true
warn_redundant_casts = true
warn_unused_ignores = true
